grammar.js
    file: ($) =>
      seq(
        optional(
          seq(
            field("moduleDeclaration", $.module_declaration),
            $._virtual_end_decl
          )
        ),
        optional($._import_list),
        optional($._top_decl_list)
      ),

    module_declaration: ($) =>
      prec.left(
        choice(
          seq(
            optional($.port),
            $.module,
            field("name", $.module_identifier),
            field("exposing", $.exposing_list)
          ),
          seq(
            $.effect,
            $.module,
            field("name", $.module_identifier),
            $.where,
            $.record_expr,
            field("exposing", $.exposing_list)
          )
        )
      ),

    _import_list: ($) => repeat1(seq($.import_clause, $._virtual_end_decl)),
    _top_decl_list: ($) =>
      repeat1(
        seq(
          choice(
            $.value_declaration,
            $.type_alias_declaration,
            $.type_declaration,
            $.type_annotation,
            $.port_annotation,
            $.infix_declaration
          ),
          $._virtual_end_decl
        )
      ),

    // MODULE DECLARATION

    exposing_list: ($) =>
      seq(
        $.exposing,
        "(",
        choice(
          field("doubleDot", $.double_dot),
          commaSep1(
            choice($.exposed_value, $.exposed_type, $.exposed_operator),
            ","
          )
        ),
        ")"
      ),

    exposed_value: ($) => $.lower_case_identifier,

    exposed_type: ($) =>
      seq(
        alias($._upper_case_identifier, $.type_identifier),
        optional($.exposed_union_constructors)
      ),

    exposed_union_constructors: ($) => seq("(", $.double_dot, ")"),

    _upper_case_identifier_without_leading_whitespace: ($) =>
      token.immediate(/\p{Lu}[_\d\p{L}]*/),

    _lower_case_identifier_without_leading_whitespace: ($) =>
      token.immediate(/\p{Ll}[_\d\p{L}]*/),

    _dot_without_leading_whitespace: ($) => token.immediate("."),

    module_identifier: ($) =>
      prec.right(
        seq(
          alias($._upper_case_identifier, $.module_name_segment),
          repeat(
            seq(
              alias($._dot_without_leading_whitespace, $.dot),
              alias(
                $._upper_case_identifier_without_leading_whitespace,
                $.module_name_segment
              )
            )
          )
        )
      ),

    constructor_qid: ($) =>
      prec.right(
        choice(
          alias($._upper_case_identifier, $.constructor_identifier),
          seq(
            alias($._upper_case_identifier, $.module_name_segment),
            alias($._dot_without_leading_whitespace, $.dot),
            repeat(
              seq(
                alias(
                  $._upper_case_identifier_without_leading_whitespace,
                  $.module_name_segment
                ),
                alias($._dot_without_leading_whitespace, $.dot)
              )
            ),
            alias(
              $._upper_case_identifier_without_leading_whitespace,
              $.constructor_identifier
            )
          )
        )
      ),

    type_qid: ($) =>
      prec.right(
        choice(
          alias($._upper_case_identifier, $.type_identifier),
          seq(
            alias($._upper_case_identifier, $.module_name_segment),
            alias($._dot_without_leading_whitespace, $.dot),
            repeat(
              seq(
                alias(
                  $._upper_case_identifier_without_leading_whitespace,
                  $.module_name_segment
                ),
                alias($._dot_without_leading_whitespace, $.dot)
              )
            ),
            alias(
              $._upper_case_identifier_without_leading_whitespace,
              $.type_identifier
            )
          )
        )
      ),

    value_qid: ($) =>
      choice(
        $.lower_case_identifier,
        seq(
          alias($._upper_case_identifier, $.module_name_segment),
          alias($._dot_without_leading_whitespace, $.dot),
          repeat(
            seq(
              alias(
                $._upper_case_identifier_without_leading_whitespace,
                $.module_name_segment
              ),
              alias($._dot_without_leading_whitespace, $.dot)
            )
          ),
          alias(
            $._lower_case_identifier_without_leading_whitespace,
            $.lower_case_identifier
          )
        )
      ),

    import_clause: ($) =>
      seq(
        $.import,
        field("moduleName", $.module_identifier),
        field("asClause", optional($.as_clause)),
        field("exposing", optional($.exposing_list))
      ),

    value_declaration: ($) =>
      seq(
        choice(
          field("functionDeclarationLeft", $.function_declaration_left),
          field("pattern", $.pattern)
        ),
        $.eq,
        field("body", $._expression)
      ),

    function_declaration_left: ($) =>
      prec(
        PREC.FUNCTION_START,
        seq(
          $.lower_case_identifier,
          field(
            "pattern",
            repeat(
              choice(
                $.anything_pattern,
                $.lower_pattern,
                $.tuple_pattern,
                $.unit_expr,
                $.list_pattern,
                $.record_pattern,
                $._literal_expr_group,
                $._parenthesized_pattern
              )
            )
          )
        )
      ),

    // TYPE DECLARATIONS AND REFERENCES

    type_declaration: ($) =>
      prec.left(
        seq(
          $.type,
          field("name", alias($._upper_case_identifier, $.type_identifier)),
          field("typeName", repeat($.lower_type_name)),
          $.eq,
          field("unionVariant", $.union_variant),
          repeat($._more_union_variants)
        )
      ),

    union_variant: ($) =>
      prec.left(
        seq(
          field(
            "name",
            alias($._upper_case_identifier, $.constructor_identifier)
          ),
          repeat($._single_type_expression)
        )
      ),

    _more_union_variants: ($) =>
      seq("|", field("unionVariant", $.union_variant)),

    type_alias_declaration: ($) =>
      seq(
        $.type,
        $.alias,
        field("name", alias($._upper_case_identifier, $.type_identifier)),
        field("typeVariable", repeat($.lower_type_name)),
        $.eq,
        field("typeExpression", $.type_expression)
      ),

    type_expression: ($) => arrowSep1($._type_expression_inner, $.arrow),

    _type_expression_inner: ($) =>
      choice($.type_ref, $._single_type_expression),

    type_ref: ($) => seq($.type_qid, repeat1($._single_type_expression)),

    _single_type_expression: ($) =>
      choice(
        field("part", alias($.type_ref_without_args, $.type_ref)),
        field("part", $.type_variable),
        field("part", $.record_type),
        field("part", $.tuple_type),
        seq("(", field("part", $.type_expression), ")")
      ),

    type_variable: ($) => $.lower_case_identifier,

    record_type: ($) =>
      seq(
        "{",
        optional(
          seq(
            optional($._record_base),
            commaSep1(field("fieldType", $.field_type), ",")
          )
        ),
        "}"
      ),

    field_type: ($) =>
      seq(
        field("name", $.lower_case_identifier),
        $.colon,
        field("typeExpression", $.type_expression)
      ),

    tuple_type: ($) =>
      choice(
        field("unitExpr", $.unit_expr),
        seq(
          "(",
          field("typeExpression", $.type_expression),
          repeat1(seq(",", field("typeExpression", $.type_expression))),
          ")"
        )
      ),

    type_annotation: ($) =>
      seq(
        field("name", $.lower_case_identifier),
        $.colon,
        field("typeExpression", $.type_expression)
      ),

    port_annotation: ($) =>
      seq(
        $.port,
        field("name", $.lower_case_identifier),
        $.colon,
        field("typeExpression", $.type_expression)
      ),

    // EXPRESSIONS

    _expression: ($) => choice($.bin_op_expr, $._call_or_atom),

    function_call_expr: ($) =>
      prec.dynamic(
        PREC.FUNC,
        seq(
          field("target", $._function_call_target),
          field("arg", repeat1($._atom))
        )
      ),

    _function_call_target: ($) =>
      choice(
        $.field_access_expr,
        $.value_expr,
        $.field_accessor_function_expr,
        $.operator_as_function_expr,
        $.parenthesized_expr
      ),

    _atom: ($) =>
      choice(
        $._literal_expr_group,
        $.negate_expr,
        $.field_access_expr,
        $.value_expr,
        $.field_accessor_function_expr,
        $.operator_as_function_expr,
        $.parenthesized_expr,
        $.unit_expr,
        $.tuple_expr,
        $.list_expr,
        $.record_expr,
        $.if_else_expr,
        $.case_of_expr,
        $.let_in_expr,
        $.anonymous_function_expr,
        $.glsl_code_expr
      ),

    field_access_expr: ($) =>
      prec.left(
        seq(
          field("target", $._field_access_start),
          repeat1($._field_access_segment)
        )
      ),

    _field_access_start: ($) =>
      prec(
        PREC.FIELD_ACCESS_START,
        choice(
          $.field_access_expr,
          choice($.value_expr, $.parenthesized_expr, $.record_expr)
        )
      ),

    _field_access_segment: ($) =>
      prec.left(
        seq(
          alias($._dot_without_leading_whitespace, $.dot),
          alias(
            $._lower_case_identifier_without_leading_whitespace,
            $.lower_case_identifier
          )
        )
      ),

    parenthesized_expr: ($) =>
      seq("(", field("expression", $._expression), ")"),

    _literal_expr_group: ($) =>
      choice(
        $.char_constant_expr,
        $.number_constant_expr,
        $.string_constant_expr
      ),

    number_constant_expr: ($) => $.number_literal,

    value_expr: ($) => field("name", choice($.value_qid, $.constructor_qid)),

    list_expr: ($) =>
      seq("[", optional(commaSep1(field("exprList", $._expression), ",")), "]"),

    record_expr: ($) => seq("{", optional($._record_inner), "}"),

    _record_base: ($) =>
      seq(field("baseRecord", $.record_base_identifier), "|"),

    _record_inner: ($) =>
      seq(optional($._record_base), commaSep1(field("field", $.field), ",")),

    field: ($) =>
      seq(
        field("name", $.lower_case_identifier),
        $.eq,
        field("expression", $._expression)
      ),

    lower_pattern: ($) => $.lower_case_identifier,

    _parenthesized_pattern: ($) => seq("(", $.pattern, ")"),

    // MISC
    _upper_case_identifier: ($) => /\p{Lu}[_\d\p{L}]*/,

    lower_case_identifier: ($) => /\p{Ll}[_\d\p{L}]*/,

    number_literal: ($) =>
      token(choice(/-?[0-9]+(\.[0-9]+)?(e-?[0-9]+)?/, /0x[0-9A-Fa-f]+/)),

    module: ($) => "module",
    effect: ($) => "effect",
    where: ($) => "where",
    import: ($) => "import",
    as: ($) => "as",
    exposing: ($) => "exposing",
    type: ($) => "type",
    alias: ($) => "alias",
    port: ($) => "port",
    double_dot: ($) => "..",
    eq: ($) => "=",
    arrow: ($) => "->",
    colon: ($) => ":",
    dot: ($) => ".",
