test/corpus/incomplete.txt
================================================================================
Incomplete function call
================================================================================

view model =
    div []
        [ Html.
        ]

--------------------------------------------------------------------------------

(file
  (value_declaration
    (function_declaration_left
      (lower_case_identifier)
      (lower_pattern
        (lower_case_identifier)))
    (eq)
    (function_call_expr
      (value_expr
        (value_qid
          (lower_case_identifier)))
      (list_expr)
      (list_expr
        (value_expr
          (constructor_qid
            (constructor_identifier)))
        (ERROR
          (dot))))))

================================================================================
Incomplete model access
================================================================================
view model =
    div []
        [ model.
        ]


--------------------------------------------------------------------------------

(file
  (value_declaration
    (function_declaration_left
      (lower_case_identifier)
      (lower_pattern
        (lower_case_identifier)))
    (eq)
    (function_call_expr
      (value_expr
        (value_qid
          (lower_case_identifier)))
      (list_expr)
      (list_expr
        (field_access_expr
          (value_expr
            (value_qid
              (lower_case_identifier)))
          (dot)
          (MISSING lower_case_identifier))))))

================================================================================
Incomplete model access
================================================================================
view model =
    div []
        [ model.
        ]


--------------------------------------------------------------------------------

(file
  (value_declaration
    (function_declaration_left
      (lower_case_identifier)
      (lower_pattern
        (lower_case_identifier)))
    (eq)
    (function_call_expr
      (value_expr
        (value_qid
          (lower_case_identifier)))
      (list_expr)
      (list_expr
        (field_access_expr
          (value_expr
            (value_qid
              (lower_case_identifier)))
          (dot)
          (MISSING lower_case_identifier))))))

================================================================================
Incomplete import
================================================================================
import Foo as
import App exposing (Page(..))
defaultPage = Home

--------------------------------------------------------------------------------

(file
  (ERROR
    (import)
    (module_identifier
      (module_name_segment))
    (as))
  (import_clause
    (import)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier)
        (exposed_union_constructors
          (double_dot)))))
  (value_declaration
    (function_declaration_left
      (lower_case_identifier))
    (eq)
    (value_expr
      (constructor_qid
        (constructor_identifier)))))
