test/corpus/module.txt
================================================================================
module statement exposing all
================================================================================

module Main exposing (..)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (double_dot))))

================================================================================
module statement sub dir exposing all
================================================================================

module Page.View exposing (..)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment)
      (dot)
      (module_name_segment))
    (exposing_list
      (exposing)
      (double_dot))))

================================================================================
module statement exposing single function
================================================================================

module Main exposing (view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_value
        (lower_case_identifier)))))

================================================================================
module statement exposing multiple functions
================================================================================

module Main exposing (main, update, view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))

================================================================================
module statement exposing type with all constructors and functions
================================================================================

module Main exposing (Msg(..), main, update, view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier)
        (exposed_union_constructors
          (double_dot)))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))

================================================================================
module statement exposing type with no constructors and functions
================================================================================

module Main exposing (Msg, main, update, view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))

================================================================================
module statement exposing type with all constructors and functions
================================================================================

module Main exposing (Msg(..), main, update, view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier)
        (exposed_union_constructors
          (double_dot)))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))

================================================================================
module statement exposing type with one constructors and functions - not valid in elm 0.19 - should error
================================================================================

module Main exposing (Msg(One), main, update, view)

--------------------------------------------------------------------------------

(file
  (module_declaration
    (module)
    (module_identifier
      (module_name_segment))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier))
      (ERROR
        (type_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))

================================================================================
effect module statement exposing
================================================================================

effect module Task where { command = MyCmd } exposing
  ( Task
  , succeed, fail
  , map, map2, map3, map4, map5
  , sequence
  , andThen
  , onError, mapError
  , perform, attempt
  )
--------------------------------------------------------------------------------

(file
  (module_declaration
    (effect)
    (module)
    (module_identifier
      (module_name_segment))
    (where)
    (record_expr
      (field
        (lower_case_identifier)
        (eq)
        (value_expr
          (constructor_qid
            (constructor_identifier)))))
    (exposing_list
      (exposing)
      (exposed_type
        (type_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier))
      (exposed_value
        (lower_case_identifier)))))
