test/corpus/type.txt
================================================================================
Type statement
================================================================================

type Msg
    = Increment

type Msg
    = Increment
    | Decrement

type Msg
    = Increment
    | Decrement
    | NoOp

--------------------------------------------------------------------------------

(file
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier)))
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier)))
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier))))

================================================================================
Type statement with payload
================================================================================

type Problem
    = ContentProblem ValidationProblem
    | GenericProblem String
    | MetaProblem String


type ValidationProblem
    = WithScreen ScreenId ScreenProblem
    | RequiresAtLeastOneScreen
    | ScreenListProblem ScreenList.ValidationProblem


type ScreenProblem
    = WithElement Int ElementProblem
    | ScreenIsEmpty
    | ScreenIsUnreachable


type ElementProblem
    = InvalidElement String
    | InvalidScreenTarget
    | InvalidScreenTargetCausesCycle

--------------------------------------------------------------------------------

(file
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier))))
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier))))
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier)))))
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier)))
      (type_ref
        (type_qid
          (type_identifier))))
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (module_name_segment)
          (dot)
          (type_identifier)))))
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier)))
      (type_ref
        (type_qid
          (type_identifier))))
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier)))
  (type_declaration
    (type)
    (type_identifier)
    (eq)
    (union_variant
      (constructor_identifier)
      (type_ref
        (type_qid
          (type_identifier))))
    (union_variant
      (constructor_identifier))
    (union_variant
      (constructor_identifier))))
