test/corpus/type_alias.txt
================================================================================
Type alias number
================================================================================

type alias Number =
    Int


--------------------------------------------------------------------------------

(file
  (type_alias_declaration
    (type)
    (alias)
    (type_identifier)
    (eq)
    (type_expression
      (type_ref
        (type_qid
          (type_identifier))))))

================================================================================
Type alias
================================================================================

type alias ListItem =
    { name : String
    , value : Int
    , itemType : ListItemType
    }


--------------------------------------------------------------------------------

(file
  (type_alias_declaration
    (type)
    (alias)
    (type_identifier)
    (eq)
    (type_expression
      (record_type
        (field_type
          (lower_case_identifier)
          (colon)
          (type_expression
            (type_ref
              (type_qid
                (type_identifier)))))
        (field_type
          (lower_case_identifier)
          (colon)
          (type_expression
            (type_ref
              (type_qid
                (type_identifier)))))
        (field_type
          (lower_case_identifier)
          (colon)
          (type_expression
            (type_ref
              (type_qid
                (type_identifier)))))))))
